# dreamberd-interpreter

./: .gitignore  ACTUAL_ARCHITECTURE.md  ANALYSIS_SUMMARY.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_GUIDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_SUMMARY.md  COMPARISON.md  Cargo.toml  DOCUMENTATION_OVERHAUL_SUMMARY.md  DREAMBERD_IDE_README.md  HANDLER_MIGRATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE.md  KEYWORD_ALIASING_DESIGN.md  LANGUAGE_REFERENCE.md  LICENSE  PHASE2_COMPLETE.md  PROGRAMMING_GUIDE.md  QUICK_REFERENCE.md  README-RUST.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  RUST_REFACTORING.md  SPECIFICATION_COMPLIANCE_REPORT.md  SPEC_ANALYSIS.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md  benchmarks.py  comprehensive_test.gom  constructor_test.gom  debug_const.gom  debug_if_complete.gom  debug_import.gom  debug_print.gom  debug_simple.gom  debug_tokens.gom  debug_tokens_simple.gom  distribute_ide.sh  (+125 more)
dreamberd/: __init__.py  builtin.py  interpreter.py
dreamberd-ide-aarch64/: README.txt  run_ide.sh
dreamberd-ide-aarch64/examples/: hello.gom  mandelbrot.gom
dreamberd/processor/: expression_tree.py  syntax_tree.py
examples/: calculator.gom  custom_handler_example.py  hello.gom  ide_demo.gom  mandelbrot.db  mandelbrot.gom
gulfofmexico/: __init__.py  __main__.py  base.py  builtin.py  constants.py  interpreter.py  plugin_system.py  repl.py  serialize.py
gulfofmexico/engine/: core.py
gulfofmexico/ide/: __main__.py
gulfofmexico/processor/: lexer.py  syntax_tree.py
programs/: README.md
programs/demos/: async_pipeline.gom  banking_system.gom  calculator.gom  feature_showcase.gom  multi_file.gom  reactive_counter.gom  rpg_character.gom  task_manager.gom
programs/examples/: 01_hello_world.gom  02_variables.gom  03_arrays.gom  04_probabilistic.gom  05_functions.gom  06_classes.gom  07_conditionals.gom  08_equality.gom  09_three_valued_logic.gom  10_reactive.gom  11_lifetimes.gom  12_async.gom  13_string_interpolation.gom  14_arithmetic.gom  15_word_numbers.gom
programs/tests/: test_arithmetic.gom  test_array_indexing.gom  test_async.gom  test_classes.gom  test_conditionals.gom  test_equality.gom  test_fractional_indexing.gom  test_functions.gom  test_probabilistic.gom  test_reactive.gom  test_string_interpolation.gom  test_three_valued_logic.gom  test_variables.gom  tmp_classes_min.gom
programs/tests/dev/: README.md  test_func_ref.gom  test_greet_simple.gom  test_no_parens.gom  test_return_arg.gom
scripts/: README.md  benchmarks.py  fix_function_calls.py  fix_indentation.py  run_all_programs.py  run_programs_via_repl.py
src/: alias.rs  base.rs  builtin.rs  interpreter.rs  main.rs  serialize.rs  storage.rs  tests_alias_trigger.rs
src/processor/: expression_tree.rs  lexer.rs  mod.rs  syntax_tree.rs
tests/: test_control_flow_handlers.py  test_function_handlers.py  test_integration.py  test_special_handlers.py  test_variable_handlers.py
