[package]
name = "dreamberd"

pub mod builtin;version = "0.2.0"

pub mod interpreter;edition = "2021"

pub mod processor;authors = ["Vivaan Singhvi <singhvi.vivaan@gmail.com>"]

pub mod serialize;description = "An interpreter for the perfect programming language, DreamBerd (Rust implementation)"

license = "MIT"

pub use base::{Token, TokenType, DreamberdError};repository = "https://github.com/vivaansinghvi07/dreamberd-interpreter"

pub use interpreter::Interpreter;readme = "README-RUST.md"


[[bin]]
name = "dreamberd"
path = "src/main.rs"

[dependencies]
# CLI and REPL
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async and threading
tokio = { version = "1.40", features = ["full"] }

# HTTP for global variables
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }

# GitHub API for public globals
octocrab = { version = "0.39", optional = true }

# Input handling for after statements
device_query = { version = "2.1", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.10"
lazy_static = "1.5"
unicode-segmentation = "1.11"

[features]
default = []
input = ["device_query"]
globals = ["reqwest", "octocrab"]
full = ["input", "globals"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
